@@ -1,6 +1,11 @@
 2008-01-01  Jim Evins  <evins@snaught.com>
 
 	* src/merge-evolution.c:
+		Do a case-insensitive sort.
+
+2008-01-01  Jim Evins  <evins@snaught.com>
+
+	* src/merge-evolution.c:
 		Sort evolution by "file_under" field.  Original patch provided
 		by Peter Cherriman <glabels-devel2712@bubieyehyeh.me.uk> in
 		Patch #1860423.
